samples/_failures_safe/1761688987_ad0d38_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_43f76fc1.c: In function ‘main’:
./samples/SAFE/__tmp_43f76fc1.c:149:27: error: expected ‘)’ at end of input
  149 |         if (!is_valid_char
      |            ~              ^
      |                           )
./samples/SAFE/__tmp_43f76fc1.c:149:9: error: expected declaration or statement at end of input
  149 |         if (!is_valid_char
      |         ^~
./samples/SAFE/__tmp_43f76fc1.c:149:9: error: expected declaration or statement at end of input
